Ho provato a fare la RecyclerView, ma nulla. Ho problemi nel farlo ocn il binding, online trovo solo roba in il findViewById, quindi succede un macello. Quindi la classe RistorantiFragment è da rivedere, insieme al resto.

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -21,7 +21,7 @@
             android:background="#449de9"
             android:elevation="3dp"
             android:id="@+id/toolbar"
-            app:title="Toolbar"/>
+            app:title=" "/>
 
         <androidx.fragment.app.FragmentContainerView
             android:layout_width="match_parent"
