--- a/app/src/main/res/menu/menu_bar.xml
+++ b/app/src/main/res/menu/menu_bar.xml
@@ -8,17 +8,17 @@
 
         <item
             android:id="@+id/home"
-
+            android:icon="@drawable/baseline_home_24"
             android:title="Home"/>
 
         <item
             android:id="@+id/ristoranti"
-
+            android:icon="@drawable/baseline_fastfood_24"
             android:title="Ristoranti"/>
 
         <item
             android:id="@+id/hotel"
-
+            android:icon="@drawable/baseline_hotel_24"
             android:title="Hotel"/>
 
         <item
@@ -29,8 +29,8 @@
 
         <item
             android:id="@+id/exit"
-
-            android:title="Exit"/>
+            android:icon="@drawable/baseline_logout_24"
+            android:title="Logout"/>
 
 
     </group>
