Sistemazione file e cartelle

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".LoginFragment">
+    tools:context=".loginregister.LoginFragment">
 
     <EditText
         android:id="@+id/username"
