--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -7,7 +7,7 @@
     tools:openDrawer="start"
     android:fitsSystemWindows="true"
     android:id="@+id/drawerLayout"
-    tools:context=".ProfileActivity">
+    tools:context=".home.HomeActivity">
 
     <LinearLayout
         android:orientation="vertical"
