--- a/app/src/main/res/menu/menu_bar.xml
+++ b/app/src/main/res/menu/menu_bar.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view"
-    >
+    tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
 
@@ -27,11 +26,6 @@
             android:title="Luoghi"/>
 
 
-        <item
-            android:id="@+id/exit"
-            android:icon="@drawable/baseline_logout_24"
-            android:title="Logout"/>
-
 
     </group>
 
@@ -45,6 +39,11 @@
             android:icon="@drawable/baseline_share_24"
             android:title="Share"
             />
+
+            <item
+                android:id="@+id/exit"
+                android:icon="@drawable/baseline_logout_24"
+                android:title="Logout"/>
 
         </menu>
 
