adesso vi sarà un'animazione quando clicchiamo in un ristorante e si aprirà DettagliRistorantiFragment, le animazioni utilizzate sono: slide_in_left.xml slide_in_right.xml slide_out_left.xml slide_out_right.xml

--- a/app/src/main/res/layout/fragment_dettagli_ristoranti.xml
+++ b/app/src/main/res/layout/fragment_dettagli_ristoranti.xml
@@ -1,27 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context=".ristoranti.DettagliRistorantiFragment">
+
+    <ImageView
+        android:id="@+id/imageRist"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/a" />
 
     <TextView
         android:id="@+id/textNome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:layout_marginBottom="8dp"
         tools:text="Nome Ristorante" />
 
     <TextView
         android:id="@+id/textPosizione"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
         android:layout_marginBottom="8dp"
+        android:textSize="16sp"
         tools:text="Via Roma 1, Città" />
 
     <RatingBar
