Ho semplicemente aggiunto la sezione AttrazioniFragment e MeteoFragment e reso "cliccabile"

--- a/app/src/main/res/menu/menu_bar.xml
+++ b/app/src/main/res/menu/menu_bar.xml
@@ -21,9 +21,14 @@
             android:title="Hotel"/>
 
         <item
-            android:id="@+id/luoghi"
-            android:icon="@drawable/baseline_holiday_village_24"
-            android:title="Luoghi"/>
+            android:id="@+id/attrazzioni"
+            android:icon="@drawable/baseline_beach_access_24"
+            android:title="Attrazioni"/>
+
+        <item
+            android:id="@+id/meteo"
+            android:icon="@drawable/baseline_wb_sunny_24"
+            android:title="Meteo"/>
 
 
 
