--- a/app/src/main/res/layout/fragment_dettagli_ristoranti.xml
+++ b/app/src/main/res/layout/fragment_dettagli_ristoranti.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,38 +8,68 @@
     android:orientation="vertical"
     tools:context=".ristoranti.DettagliRistorantiFragment">
 
-    <ImageView
-        android:id="@+id/imageRist"
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/a" />
+        android:layout_height="wrap_content" >
 
-    <TextView
-        android:id="@+id/textNome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        tools:text="Nome Ristorante" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textPosizione"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:textSize="16sp"
-        tools:text="Via Roma 1, Città" />
+            <ImageView
+                android:id="@+id/imageRist"
+                android:layout_width="match_parent"
+                android:layout_height="250dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/pizzeria" />
 
-    <RatingBar
-        android:id="@+id/ratingBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:numStars="5"
-        android:rating="0"
-        android:stepSize="0.5" />
+            <RatingBar
+                android:id="@+id/ratingBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/imageRist"
+                app:layout_constraintEnd_toEndOf="@+id/textNome"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="@+id/textNome" />
+
+            <TextView
+                android:id="@+id/textPosizione"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                app:layout_constraintStart_toEndOf="@+id/imageLoc"
+                app:layout_constraintTop_toBottomOf="@+id/textNome"
+                tools:text="Via Roma 1, Città" />
+
+            <TextView
+                android:id="@+id/textNome"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.142"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/imageRist"
+                app:layout_constraintVertical_bias="0.151"
+                tools:text="Nome Ristorante" />
+
+            <ImageView
+                android:id="@+id/imageLoc"
+                android:layout_width="24dp"
+                android:layout_height="21dp"
+                android:src="@drawable/tag"
+                app:layout_constraintStart_toStartOf="@+id/textNome"
+                app:layout_constraintTop_toBottomOf="@+id/textNome" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <!-- Aggiungi altri componenti UI per visualizzare ulteriori dettagli del ristorante -->
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
