--- a/app/src/main/res/menu/menu_bar.xml
+++ b/app/src/main/res/menu/menu_bar.xml
@@ -35,14 +35,14 @@
     </group>
 
     <item
-        android:title="Comunication">
+        android:title="">
 
         <menu>
 
         <item
-            android:id="@+id/share"
-            android:icon="@drawable/baseline_share_24"
-            android:title="Share"
+            android:id="@+id/profilo"
+            android:icon="@drawable/baseline_person_24"
+            android:title="Profilo"
             />
 
             <item
@@ -53,5 +53,6 @@
         </menu>
 
     </item>
+
 
 </menu>
