--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -46,4 +46,13 @@
         android:textColor="@color/black"
         android:backgroundTint="@color/white"
         app:layout_constraintTop_toBottomOf="@id/prenotazioniButton"/>
+
+    <Button
+        android:id="@+id/logoutButton"
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
+        android:text="Logout"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/white"
+        app:layout_constraintTop_toBottomOf="@id/settingsButton"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
