--- a/app/src/main/res/layout/hotel_card_view_design.xml
+++ b/app/src/main/res/layout/hotel_card_view_design.xml
@@ -11,7 +11,12 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="30dp">
+        app:cardCornerRadius="30dp"
+        android:id="@+id/cardViewID"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:scrollbarSize="15dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -30,11 +35,14 @@
                 android:id="@+id/textNome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="24dp"
                 android:text="TextView"
+                android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.2"
                 android:textColor="@color/white" />
 
             <TextView
@@ -42,7 +50,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
+                android:textSize="16dp"
+                android:gravity="center"
+
                 android:textColor="@color/white"
+                android:layout_marginTop="15dp"
                 app:layout_constraintTop_toBottomOf="@id/ratingBar"
                 app:layout_constraintStart_toStartOf="@id/ratingBar"
                 app:layout_constraintEnd_toEndOf="@id/ratingBar"/>
@@ -51,9 +63,13 @@
                 android:id="@+id/ratingBar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:gravity="center"
+                android:isIndicator="true"
                 app:layout_constraintTop_toBottomOf="@id/textNome"
                 app:layout_constraintStart_toStartOf="@id/textNome"
-                app:layout_constraintEnd_toEndOf="@id/textNome"/>
+                app:layout_constraintEnd_toEndOf="@id/textNome"
+                style="@style/Widget.AppCompat.RatingBar.Indicator"
+                android:layout_marginTop="10dp"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
