OnClick hotel fragment Inizio prenotazione

--- a/app/src/main/res/layout/fragment_dettagli_attrazioni.xml
+++ b/app/src/main/res/layout/fragment_dettagli_attrazioni.xml
@@ -9,7 +9,7 @@
     tools:context=".attrazioni.DettagliAttrazioniFragment">
 
     <ImageView
-        android:id="@+id/imageRist"
+        android:id="@+id/imageHotel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/a" />
