--- a/app/src/main/res/layout/fragment_dettagli_ristoranti.xml
+++ b/app/src/main/res/layout/fragment_dettagli_ristoranti.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/button12">
+        app:layout_constraintBottom_toTopOf="@id/bottonePrenota">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -34,7 +34,7 @@
                     android:layout_height="match_parent">
 
                     <ImageView
-                        android:id="@+id/imageRist"
+                        android:id="@+id/imageHotel"
                         android:layout_width="match_parent"
                         android:layout_height="250dp"
                         android:scaleType="fitXY"
@@ -57,7 +57,7 @@
                         android:progressTint="#FFFF00"
                         android:rating="3"
                         android:secondaryProgressTint="@color/black"
-                        app:layout_constraintBottom_toBottomOf="@+id/imageRist"
+                        app:layout_constraintBottom_toBottomOf="@+id/imageHotel"
                         app:layout_constraintTop_toBottomOf="@id/textPosizione"
                         app:layout_constraintEnd_toEndOf="@+id/textNome"
                         app:layout_constraintVertical_bias="0.05"
@@ -86,7 +86,7 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.1"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="@+id/imageRist"
+                        app:layout_constraintTop_toTopOf="@+id/imageHotel"
                         app:layout_constraintVertical_bias="0.1"
                         tools:text="Nome Ristorante" />
 
@@ -185,7 +185,7 @@ Nullam tristique fermentum odio, at rhoncus arcu malesuada sit amet. Cras est me
 
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/bottonePrenota"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Button"
