--- a/app/src/main/res/layout/fragment_dettagli_hotel.xml
+++ b/app/src/main/res/layout/fragment_dettagli_hotel.xml
@@ -148,7 +148,7 @@
                 android:textColor="@color/black" />
 
             <Button
-                android:id="@+id/button10"
+                android:id="@+id/infoButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
