--- a/app/src/main/res/layout/fragment_dettagli_hotel.xml
+++ b/app/src/main/res/layout/fragment_dettagli_hotel.xml
@@ -30,6 +30,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:src="@drawable/shadow_bg"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
