--- a/app/src/main/res/layout/hotel_card_view_design.xml
+++ b/app/src/main/res/layout/hotel_card_view_design.xml
@@ -68,6 +68,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:isIndicator="true"
+                android:progressBackgroundTint="#33FFFF00"
+                android:progressTint="#FFFF00"
+                android:secondaryProgressTint="@color/black"
                 app:layout_constraintTop_toBottomOf="@id/textNome"
                 app:layout_constraintStart_toStartOf="@id/textNome"
                 app:layout_constraintEnd_toEndOf="@id/textNome"
