--- a/app/src/main/res/layout/fragment_ristoranti.xml
+++ b/app/src/main/res/layout/fragment_ristoranti.xml
@@ -7,10 +7,20 @@
     android:layout_height="wrap_content"
     tools:context=".hotel.HotelFragment">
 
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/splash_screen_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ristorantiRecyclerView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_margin="10dp"
         android:orientation="horizontal"
         android:scrollbars="horizontal"
