--- a/app/src/main/res/layout/attrazioni_card_view.xml
+++ b/app/src/main/res/layout/attrazioni_card_view.xml
@@ -34,25 +34,26 @@
                 android:id="@+id/textNome"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
+                android:textSize="24dp"
                 android:text="TextView"
-                android:textColor="@color/white"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.05"
+                android:gravity="center"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias=".25" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0.2"
+                android:textColor="@color/white" />
 
             <TextView
                 android:id="@+id/textPosizione"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:gravity="center"
                 android:text="TextView"
-                android:layout_marginTop="5dp"
                 android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                android:textSize="16dp"
+                app:layout_constraintEnd_toEndOf="@+id/textNome"
                 app:layout_constraintStart_toStartOf="@+id/textNome"
                 app:layout_constraintTop_toBottomOf="@+id/textNome" />
 
