--- a/app/src/main/res/layout/fragment_attrazioni.xml
+++ b/app/src/main/res/layout/fragment_attrazioni.xml
@@ -7,6 +7,16 @@
     android:layout_height="wrap_content"
     tools:context=".hotel.HotelFragment">
 
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/splash_screen_bg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/attrazioniRecyclerView"
         android:layout_width="0dp"
