--- a/app/src/main/res/layout/fragment_dettagli_hotel.xml
+++ b/app/src/main/res/layout/fragment_dettagli_hotel.xml
@@ -30,16 +30,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:src="@drawable/shadow_bg"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
-
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="match_parent"
@@ -56,8 +46,7 @@
                     android:id="@+id/imageHotel"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
-                    android:scaleType="fitXY"
-                    android:src="@drawable/pizzeria"
+                    android:scaleType="centerCrop"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
