--- a/app/src/main/res/layout/recensione_design.xml
+++ b/app/src/main/res/layout/recensione_design.xml
@@ -20,6 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:isIndicator="true"
+        android:progressBackgroundTint="#33FFFF00"
+        android:progressTint="#FFFF00"
+        android:secondaryProgressTint="@color/black"
         android:layout_marginBottom="8dp"/>
 
     <TextView
